--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             margin-right: 8px;
             opacity: 0.7;
         }
+      .td-right{
+        text-align: right;
+      }
   </style>
 </head>
 
@@ -49,7 +52,7 @@
         <option v-for="x in array_estados" :value="x.sigla">{{x.nome}}</option> 
       </div> 
     </select>
-    <h2>Condição avaliada</h2>
+    <h2>Condição Avaliada</h2>
     <select v-model="doenca_selecionada" @change="carrega_doenca"> 
         <option v-for="x in lista_doencas">{{x}}</option>   
     </select>
@@ -161,14 +164,18 @@ const zip = (...arrays) => {
         } 
         layer.bindPopup(`<table>
           <tr>
-            <td><em>${app.doenca_selecionada}</em></td>
-            <td><b>${feature.properties.municipio}</b></td>
+            <td>Condição avaliada</td>
+            <td class="td-right"><em>${app.doenca_selecionada}</em></td>
           </tr>
           <tr>
-            <td>Atendimentos por mil/hab</td><td>${indice}</td>
+            <td>Município</td>
+            <td class="td-right"><b>${feature.properties.municipio}</b></td>
           </tr>
           <tr>
-            <td>População</td><td>${feature.properties.populacao}</td>
+            <td>Atendimentos por mil/hab</td><td class="td-right">${indice}</td>
+          </tr>
+          <tr>
+            <td>População</td><td class="td-right">${feature.properties.populacao}</td>
           </tr>
         </table>
         `)
@@ -233,7 +240,11 @@ const zip = (...arrays) => {
     },
     computed: {
       estados_por_regiao: function(){
-        return groupBy(this.lista_estados, "regiao")
+        var agrupados = groupBy(this.lista_estados, "regiao")
+        Object.values(agrupados).forEach( lista => {
+            lista.sort( (a,b) =>  (a.nome > b.nome)? 1: -1 )
+        } )
+        return agrupados
       }
     }
   })
